--- a/getting-started.html
+++ b/getting-started.html
@@ -5,7 +5,7 @@
   <title>Lutachu CSS Framework</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <link rel="stylesheet" type="text/css" href="./src/lutachu.css">
+  <link rel="stylesheet" type="text/css" href="./src/lutachu.min.css">
   <link rel="stylesheet" type="text/css" href="./src/docs.css">
 </head>
 <body>
