--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Lutachu Framework</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <link rel="stylesheet" type="text/css" href="./src/lutachu.css">
+  <link rel="stylesheet" type="text/css" href="./src/lutachu.min.css">
   <link rel="stylesheet" type="text/css" href="./src/docs.css">
   <style type="text/css">
     #index {
