--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <div class="container">
     <h1>Lutachu</h1>
     <p>初心を忘れず、始終を得れ。</p>
-    <a style="margin-left: 5px; color: #fff;" href="./getting-start.html" class="btn btn-ghost radius">Get Started</a>
+    <a style="margin-left: 5px; color: #fff; text-shadow: none; box-shadow: none;" href="./getting-start.html" class="btn btn-ghost radius">Get Started</a>
   </div>
 
   <div class="copyright">
