--- a/index.html
+++ b/index.html
@@ -8,36 +8,43 @@
   <link rel="stylesheet" type="text/css" href="./src/lutachu.min.css">
   <link rel="stylesheet" type="text/css" href="./src/docs.css">
   <style type="text/css">
+    #main {
+      display: table;
+      
+      width: 100%;
+      height: 100%;
+    }
+
+    #main > .container {
+      display: table-cell;
+      vertical-align: middle;
+      text-align: center;
+    }
+
     #index {
       color: #fff;
       min-height: 100%;
       position: relative;
       background-color: #00A397;
-      background-position: center;
     }
 
     #index h1 {
       color: #fff;
-      height: 4em;
       font-size: 6em;
-      padding-top: 1.5em;
-      overflow: hidden;
-      font-weight: normal;
-      margin-bottom: -1em;
+      margin: 0;
     }
 
     #index p {
-      margin-top: 0;
-      font-size: 20px;
-      margin-left: 6px;
+      font-size: 18px;
     }
 
     #index .copyright {
-      left: -8px;
+      left: -2px;
       bottom: 0;
+
       width: 100%;
-      margin-bottom: 1em;
-      padding: 5px 0;
+      padding: 0 0 1em 0;
+
       position: absolute;
       color: rgba(255, 255, 255, .6);
     }
@@ -82,16 +89,18 @@
     </div>
   </nav>
 
-  <div class="container">
-    <h1>Lutachu</h1>
-    <p>初心を忘れず、始終を得れ。</p>
-    <a style="margin-left: 5px; color: #fff; text-shadow: none; box-shadow: none;" href="./getting-start.html" class="btn btn-ghost radius">Get Started</a>
-  </div>
-
-  <div class="copyright">
-    <div class="container">
-    <p>&copy; 2015 Lingoys!Art.</p>
+  <main id="main">
+   <div class="container">
+      <h1>Lutachu</h1>
+      <p>初心を忘れず、始終を得れ。</p>
+      <a href="./getting-start.html" class="btn btn-ghost radius">Get Started</a>
     </div>
-  </div>
+  </main>
+
+  <footer class="copyright">
+    <div class="container">
+      <p>&copy; 2015 Lingoys!Art.</p>
+    </div>
+  </footer>
 </body>
 </html>
