Fix small detail

--- a/getting-started.html
+++ b/getting-started.html
@@ -13,14 +13,14 @@
     <div class="container">
       <a href="./index.html" class="nav-band">Lutachu</a>
       <ul class="nav-group right">
-        <li><a href="./getting-start.html">Getting Started</a></li>
+        <li class="active"><a href="#">Getting Started</a></li>
         <li><a>CSS</a></li>
         <li><a>Components</a></li>
       </div>
     </div>
   </nav>
 
-  <section id="content" class="row container">
+  <main id="content" class="container">
     <aside>
 
     </aside>
@@ -28,11 +28,11 @@
     <article>
 
     </article>
-  </section>
+  </main>
 
   <footer id="footer">
     <div class="container">
-      <p>&copy; 2015 Lingoys!Art.</p>
+      <p>&copy; 2015 <a href="https://lingoys.com/" title="Lingoys!Art.">Lingoys!Art.</a></p>
       <p>Licensed under <a href="http://creativecommons.org/licenses/by/3.0/" title="Attribution 3.0 Unported (CC BY 3.0)">Attribution 3.0 Unported (CC BY 3.0)</a> </p>
     </div>
   </footer>
