--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
    <div class="container">
       <h1>Lutachu</h1>
       <p>初心を忘れず、始終を得れ。</p>
-      <a href="./getting-start.html" class="btn btn-ghost radius">Get Started</a>
+      <a href="./getting-started.html" class="btn btn-ghost radius">Get Started</a>
     </div>
   </main>
 
   <footer class="copyright">
     <div class="container">
-      <p>&copy; 2015 Lingoys!Art.</p>
+      <p>&copy; 2015 <a href="https://lingoys.com/" title="Lingoys!Art.">Lingoys!Art.</a></p>
     </div>
   </footer>
 </body>
