--- a/getting-started.html
+++ b/getting-started.html
@@ -20,14 +20,19 @@
     </div>
   </nav>
 
-  <main id="content" class="container">
-    <aside>
+  <main id="main">
+    <div class="container">
+      <aside>
+        <ul>
+          <li>
+            <a>Getting Started</a>
+          </li>
+        </ul>
+      </aside>
 
-    </aside>
-
-    <article>
-
-    </article>
+      <article>
+      </article>
+    </div>
   </main>
 
   <footer id="footer">
